--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Home') %>
 <h1>Sample App</h1>
 <p>
   This is the home page for the <%= link_to 'RoR Tutorial', 'http://railstutorial.org/' %> sample application.
