--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,10 +20,9 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
+  h1 {
   margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -56,10 +55,10 @@ p {
 #logo {
   float: left; margin-right: 10px; font-size: 1.7em;
   color: steelblue; text-transform: uppercase; letter-spacing: -1px; padding-top: 9px; font-weight: bold; line-height: 1;
-}
-
-#logo:hover {
-  color: deeppink; text-decoration: none;
+  &:hover {
+    color: deeppink;
+    text-decoration: none;
+  }
 }
 
 /* footer */
@@ -69,27 +68,23 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #999;
+  a {
+    color: #555;
+    &:hover {
+      color: #222;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px;
+    }
+  }
 }
 
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 10px;
-}
 
