--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <nav>
     <ul>
       <li><%= link_to 'About', about_path %></li>
-      <li><%= link_to 'Contact', contact_pathg %></li>
+      <li><%= link_to 'Contact', contact_path %></li>
       <li><%= link_to 'News', 'http://news.railstutorial.org/' %></li>
     </ul>
   </nav>
