--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages', object: f.object %>
 
 <%= f.label :name, class: 'control-label' %>
 <%= f.text_field :name, class: 'form-control' %>
